feat: Finalize logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
 
     <style>
         /* Custom styles to complement Tailwind */
@@ -84,18 +84,7 @@
     <header class="fixed top-0 left-0 right-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center gap-4">
-                <div class="w-12 h-12">
-                    <svg width="100%" height="100%" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <circle cx="50" cy="50" r="48" fill="#1A1A1A" stroke="#A78BFA" stroke-width="2.5" />
-                      <text x="50" y="62" 
-                            font-family="serif, 'KaiTi', 'STKaiti'" 
-                            font-size="40" 
-                            fill="#F5F5F5" 
-                            text-anchor="middle">
-                        徽宗
-                      </text>
-                    </svg>
-                </div>
+                <img src="assets/logo.svg" alt="Huizong Logo" class="w-12 h-12">
                 <span class="font-display text-2xl font-semibold text-white">$HUIZONG</span>
             </div>
             <div class="flex items-center gap-6">
@@ -109,7 +98,7 @@
 
     <main>
         <section class="hero-bg min-h-screen flex items-center justify-center">
-            <video id="hero-video" autoplay loop muted playsinline poster="assets/rukiln-wash.jpg">
+            <video id="hero-video" autoplay loop muted playsinline>
                 <source src="assets/historianintro.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -161,16 +150,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center items-center p-8">
                     <div class="max-w-xs">
-                        <svg width="100%" height="100%" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                          <circle cx="50" cy="50" r="48" fill="#1A1A1A" stroke="#A78BFA" stroke-width="2.5" />
-                          <text x="50" y="62" 
-                                font-family="serif, 'KaiTi', 'STKaiti'" 
-                                font-size="40" 
-                                fill="#F5F5F5" 
-                                text-anchor="middle">
-                            徽宗
-                          </text>
-                        </svg>
+                        <img src="assets/logo.svg" alt="Huizong Seal Logo" class="w-full h-auto">
                     </div>
                 </div>
             </div>
@@ -212,12 +192,12 @@
     <footer class="border-t border-gray-800 mt-20">
         <div class="container mx-auto px-6 py-8 text-center text-gray-400">
             <div class="flex justify-center items-center space-x-6 mb-4">
-                <a href="https://x.com/huizongmeme" target="_blank" class="social-icon transition-transform duration-200">
+                <a href="https://x.com/your-username" target="_blank" class="social-icon transition-transform duration-200">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
                     </svg>
                 </a>
-                <a href="https://t.me/huizongmeme" target="_blank" class="social-icon transition-transform duration-200">
+                <a href="https://t.me/your-channel" target="_blank" class="social-icon transition-transform duration-200">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
                     </svg>
