--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </a>
             </div>
             <p>&copy; 2025 HUIZONG. All rights reserved.</p>
-            <p class="text-sm mt-2">$HUIZ is a digital collectible. Its the digital twin to imperial relics in a private Chinese museum.</p>
+            <p class="text-sm mt-2">$HUIZ is a digital collectible. Its digital shards of exclusive imperial relics in the custody of a private Chinese museum.</p>
         </div>
     </footer>
 
