--- a/index_zh.html
+++ b/index_zh.html
@@ -254,7 +254,7 @@
                 </a>
             </div>
             <p>&copy; 2025 HUIZONG. 保留所有權利。</p>
-            <p class="text-sm mt-2">$HUIZ 是一種數字收藏品。它是中國私人博物館中帝國遺物的數位孿生。</p>
+            <p class="text-sm mt-2">$HUIZ 是一種數字收藏品。它是託管於一間中國私人博物館的獨家帝國遺物的數字碎片。</p>
         </div>
     </footer>
     
