--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="flex items-center gap-6">
                 <a href="index_zh.html" class="text-gray-300 hover:text-white transition-colors">中文</a>
-                <a href="https://pump.fun/" target="_blank" class="hidden md:inline-block bg-brand-violet text-white font-semibold px-6 py-2 rounded-lg hover:bg-brand-violet-dark transition-colors duration-300">
+                <a href="https://pump.fun/coin/7e64vJB2zqoUTTUabS6Kjv1FPuhb6D9LuT1U6SqJQ193" target="_blank" class="hidden md:inline-block bg-brand-violet text-white font-semibold px-6 py-2 rounded-lg hover:bg-brand-violet-dark transition-colors duration-300">
                     Go to Pump.fun
                 </a>
             </div>
@@ -169,7 +169,7 @@
                 </p>
                 
                 <div class="mt-12">
-                    <a href="https://pump.fun/" target="_blank" class="degen-button shine-effect relative inline-block bg-brand-violet text-white font-bold text-lg px-12 py-4 rounded-lg overflow-hidden hover:bg-brand-violet-dark transition-all duration-300 transform hover:scale-105">
+                    <a href="https://pump.fun/coin/7e64vJB2zqoUTTUabS6Kjv1FPuhb6D9LuT1U6SqJQ193" target="_blank" class="degen-button shine-effect relative inline-block bg-brand-violet text-white font-bold text-lg px-12 py-4 rounded-lg overflow-hidden hover:bg-brand-violet-dark transition-all duration-300 transform hover:scale-105">
                         Launch on Pump.fun 🚀
                     </a>
                 </div>
