--- a/index_zh.html
+++ b/index_zh.html
@@ -138,7 +138,7 @@
             </div>
             <div class="flex items-center gap-6">
                 <a href="index.html" class="text-gray-300 hover:text-white transition-colors">English</a>
-                <a href="https://pump.fun/" target="_blank" class="hidden md:inline-block bg-brand-violet text-white font-semibold px-6 py-2 rounded-lg hover:bg-brand-violet-dark transition-colors duration-300">
+                <a href="https://pump.fun/coin/7e64vJB2zqoUTTUabS6Kjv1FPuhb6D9LuT1U6SqJQ193" target="_blank" class="hidden md:inline-block bg-brand-violet text-white font-semibold px-6 py-2 rounded-lg hover:bg-brand-violet-dark transition-colors duration-300">
                     前往 Pump.fun
                 </a>
             </div>
@@ -164,7 +164,7 @@
                 </p>
                 
                 <div class="mt-12">
-                    <a href="https://pump.fun/" target="_blank" class="degen-button shine-effect relative inline-block bg-brand-violet text-white font-bold text-lg px-12 py-4 rounded-lg overflow-hidden hover:bg-brand-violet-dark transition-all duration-300 transform hover:scale-105">
+                    <a href="https://pump.fun/coin/7e64vJB2zqoUTTUabS6Kjv1FPuhb6D9LuT1U6SqJQ193" target="_blank" class="degen-button shine-effect relative inline-block bg-brand-violet text-white font-bold text-lg px-12 py-4 rounded-lg overflow-hidden hover:bg-brand-violet-dark transition-all duration-300 transform hover:scale-105">
                         在 Pump.fun 上啟動 🚀
                     </a>
                 </div>
